force-app/main/default/objects/Master_Coverage_Team_Member__c/Master_Coverage_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Master Coverage Team Member</label>
    <nameField>
        <displayFormat>MCTM-{00000}</displayFormat>
        <label>Master Coverage Team Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Coverage Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>