force-app/main/default/objects/Master_Coverage_Team_Member__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>Coverage_Team__r.Company__r.Name</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>