force-app/main/default/objects/Master_Coverage_Team_Member__c/fields/Master_Coverage_Team__c.field-meta.xml
<CustomField>
    <fullName>Master_Coverage_Team__c</fullName>
    <label>Master Coverage Team</label>
    <referenceTo>Master_Coverage_Team__c</referenceTo>
    <relationshipLabel>Master Coverage Team Members</relationshipLabel>
    <relationshipName>Master_Coverage_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>