force-app/main/default/objects/Master_Coverage_Team_Member__c/fields/Officer__c.field-meta.xml
<CustomField>
    <fullName>Officer__c</fullName>
    <formula>Coverage_Team__r.Officer_Name__c</formula>
    <label>Officer</label>
    <type>Text</type>
</CustomField>